<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:visibility="gone"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_search_location"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/action_bar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/google_map" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_googleMap"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/google_maps"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_googleMap">


        <Button
            android:id="@+id/btn_currentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/get_current_location" />

        <Button
            android:id="@+id/btn_searchLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_location"
            android:layout_marginTop="50dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btn_changeMapType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_map_type"
            android:layout_marginTop="50dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btn_displayTrackOnMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_track_on_map"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:layout_gravity="center" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>